# fullstack-rust-sycamore

./: Cargo.toml  Trunk.toml
client/: Cargo.toml  build.rs  index.html
client/src/: main.rs  state.rs
client/src/components/: app.rs
proto/: chat.proto
server/: Cargo.toml
server/src/: main.rs
server/src/services/chat_service/: mod.rs
src/: main.rs
src/components/: app.rs
styles/: index.scss
