[package]
edition = "2018"
name    = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost    = "0.9.0"
reqwest  = { version = "0.11.6" }
sycamore = "0.6.3"
web-sys  = "0.3.55"

[build-dependencies]
rust-grpc-web = { git = "https://github.com/elliptic-email/rust-grpc-web" }
