[package]
edition = "2018"
name    = "server"
version = "0.1.0"

[dependencies]
async-graphql      = "2.10.3"
async-graphql-axum = "2.10.3"
axum               = { version = "0.2.8", features = ["headers"] }
hyper              = "0.14"
tokio              = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
pretty_assertions = "1.0.0"
